--- a/blogpost.html
+++ b/blogpost.html
@@ -13,6 +13,17 @@
                 inicio donde vamos a explicar
                 las cosas increibles que se
                 pueden hacer con ramas</p>
+                <p>
+                    Los blog son la mejor
+                    forma de compartir
+                    información y tus ideas.
+                    Mucho mas que ir a 
+                    conferencias o salir en
+                    Youtube. Excepto si eres
+                    un rockstar. Pero
+                    estadisticamente no lo
+                    eres.... por ahora.</p>
+                </p>
             </div>
         </div>
     </body>
