--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de cabecera</span>
+                <span id="tagline">Tu blog Maestro</span>
             </div>
             <div id="post">
                 <h1>Este es el Titulo
@@ -28,6 +28,7 @@
                     estadisticamente no lo
                     eres.... por ahora.</p>
                 </p>
+                <p>Suscribete y Dale Like</p>
             </div>
         </div>
     </body>
